src/sass/components/_modal-film.scss
.modal__image {
  width: 240px;
  height: 357px;
  margin: auto;
  border-radius: 5px;

  @media screen and (min-width: 768px) {
    width: 264px;
    height: 373px;
    margin: 0;
    margin-right: 68px;
  }
  @media screen and (min-width: 1280px) {
    width: 375px;
    height: 478px;
    margin-right: 16px;
  }
}
.modal__header {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 23px;
  text-transform: uppercase;
  margin-top: 20px;
  margin-bottom: 20px;

  @media screen and (min-width: 1280px) {
    font-weight: 500;
    font-size: 30px;
    line-height: 35px;
    margin-top: 0;
  }
}
.modal__features {
  display: flex;
}
.modal__features--keys {
  color: var(--modal-keys);
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
}
.modal__features--values {
  margin-left: 20px;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;

  @media screen and (min-width: 1280px) {
    margin-left: 85px;
  }
}
.modal__feature {
  margin-top: 0;
  margin-bottom: 8px;
}
.modal__feature button {
  background-color: var(--text-orange);
  color: var(--text-white);
  width: 36px;
  margin: 0;
  border: 0px solid var(--text-orange);
  border-radius: 5px;
}
.modal__value-title {
  text-transform: uppercase;
}
.modal__description-heading {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  text-transform: uppercase;
  margin-bottom: 8px;
}
.modal__description-text {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 20px;
  color: var(--text-black);
  margin: 0;
}
.modal__buttons {
  margin-top: 20px;
  display: flex;
  justify-content: space-evenly;
  @media screen and (min-width: 1280px) {
    justify-content: center;
  }
}
.modal__buttons--watched {
  border-radius: 5px;
  background-color: var(--text-orange);
  border: 1px solid var(--text-orange);
  color: var(--text-white);
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  width: 110px;
  height: 44px;
  margin: 0px;
  cursor: pointer;

  @media screen and (min-width: 768px) {
    width: 125px;
    height: 44px;
    margin-right: 14px;
  }
  @media screen and (min-width: 1280px) {
    width: 136px;
    height: 44px;
    margin-right: 15px;
  }
  &:hover {
    background-color: var(--button-watched-hover);
    border: 1px solid var(--button-watched-hover);
  }
}
.modal__buttons--queue {
  border-radius: 5px;
  border: 1px solid var(--text-black);
  color: var(--text-black);
  background-color: var(--text-white);
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  width: 110px;
  height: 44px;
  cursor: pointer;

  @media screen and (min-width: 768px) {
    width: 125px;
    height: 44px;
  }
  @media screen and (min-width: 1280px) {
    width: 136px;
    height: 44px;
  }
  &:hover {
    background-color: var(--button-queue-hover);
  }
}

.is-hidden {
  opacity: 0;
  display: none;
  pointer-events: none;
}
.modal {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  scale: 1;
  opacity: 1;
  visibility: visible;
}
.modal__window--open {
  transform: scaleY(0.01) scaleX(0);
  animation: unfoldIn 1s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
}

.modal__window--open .modal__window {
  transform: scale(0);
  animation: zoomIn 0.5s 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
}

.modal__window--close {
  transform: scale(1);
  animation: unfoldOut 1s 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
}

.modal__window--close .modal__window {
  animation: zoomOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
}

.modal__window {
  background-color: var(--text-white);
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
    0px 2px 1px rgba(0, 0, 0, 0.2);
  border-radius: 4px;
  overflow: hidden;
  padding: 48px 20px 40px 20px;
  width: 280px;
  height: 90vh;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  transition-property: opacity, visibility, transform;
  position: absolute;


  @media screen and (min-width: 768px) {
    display: flex;
    padding: 40px 72px 40px 36px;
    width: 704px;
    height: auto;
    flex-direction: row;
  }

  @media screen and (min-width: 1280px) {
    display: flex;
    padding: 40px 12px 40px 12px;
    width: 806px;
    height: auto;
  }
}
#modal__close {
  width: 30px;
  height: 30px;
  position: absolute;
  top: 16px;
  right: 16px;
  cursor: pointer;

  @media screen and (max-width: 767px) {
    top: 8px;
    right: 8px;
  }
}
.modal.is-loading .modal__window {
  visibility: hidden;
  opacity: 0;
}
@keyframes unfoldIn {
  0% {
    transform: scaleY(0.005) scaleX(0);
  }
  50% {
    transform: scaleY(0.005) scaleX(1);
  }
  100% {
    transform: scaleY(1) scaleX(1);
  }
}

@keyframes unfoldOut {
  0% {
    transform: scaleY(1) scaleX(1);
  }
  50% {
    transform: scaleY(0.005) scaleX(1);
  }
  100% {
    transform: scaleY(0.005) scaleX(0);
  }
}

@keyframes zoomIn {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}

@keyframes zoomOut {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(0);
  }
}

